# update-countdown

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  askama.toml  build.rs  build.sh  flake.nix  oha.sh  original-save.txt  package.json  save-EXAMPLE.json  save-EXAMPLE.txt  save.txt  stresstest.sh
assets/: favicon.xcf
assets/css/: style.css
assets/favicons/: site.webmanifest
assets/modules/: websocket.js
assets/modules/datetime/: duration.js  index.mjs  timeunit.js
assets/modules/display/: index.js  modal.js  navbar.js  theme.js
assets/modules/display/countdown/: elems.js  index.js  state.js
assets/modules/display/datetime/: index.js  state.js
assets/modules/display/modal/: index.js
assets/modules/display/navbar/: index.js
assets/modules/display/refresh/: index.js
assets/modules/display/userStatistics/: elems.js  index.js  state.js
assets/modules/utils/: assert.js  mediaQuery.js  timeout.js
assets/modules/websocket/: index.js
assets/scripts/: countdown.js
assets/scripts/countdownPage/: main.js
assets/scripts/countdownPage/datetime/: duration.js  timeunit.js
assets/scripts/countdownPage/display/countdown/: elems.js  index.js
assets/scripts/countdownPage/display/datetime/: index.js
assets/scripts/countdownPage/display/refresh/: index.js
assets/scripts/countdownPage/websocket/: index.js
assets/scripts/countdown_page/: main.js  types.js
assets/scripts/countdown_page/datetime/: timeunit.js
assets/scripts/countdown_page/display/: index.js
assets/scripts/countdown_page/websocket/: index.js
assets/scripts/utils/: assert.js  timeout.mjs
src/: datetime.rs  db.rs  main.rs  minify_assets.rs  routes.rs
templates/: countdown.html  layout.html
(+11 files in other folders)
