[package]
name = "update-countdown"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
askama = { version = "0.14.0", features = ["blocks"] }
axum = "0.8.4"
chrono = "0.4.41"
hashbrown = "0.15.3"
rand = "0.9.1"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
walkdir = "2.5.0"

[build-dependencies]
walkdir = "2.5.0"

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = "fat"
panic = "abort"
